<resources>
    <string name="app_name">Clak</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_continue">"Login"</string>
    <string name="sign_up">"Sign Up"</string>
    <string name="customer">"Customer"</string>
    <string name="organization">"Organization"</string>
    <string name="please_wait">Please wait...</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="see_you_soon">See you soon!</string>
    <string name="signup_error">Sign up error!</string>
    <string name="signup_weak_password">This password is too weak for Clak!</string>
    <string name="signup_invalid_email">Clak needs a valid email to function!</string>
    <string name="signup_user_exists">Somebody is already Claking with this email!</string>
    <string name="signup_password_mismatch">Passwords must match</string>
    <string name="empty_field">This field should not be blank!</string>
    <string name="title_activity_organization_main">OrganizationMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_connections">My Connections</string>
    <string name="my_clients">My Clients</string>
    <string name="log_out">Log out</string>
    <string name="no_user">No User</string>
    <string name="todo">TODO</string>
    <string name="organization_name">Organization Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email_address">Email address</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="counting_claks">Counting times claked...</string>
    <string name="visited_times">Claked %d times</string>
    <string name="error_fetch">Error fetching data</string>
    <string name="delete">Delete</string>
    <string name="deleting">Deleting...</string>
    <string name="deleted">Deleted!</string>
    <string name="error_occured">An error occurred...</string>
    <string name="error">Error!</string>
    <string name="startScan">Start Scanning</string>
</resources>
