<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/client_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/profile" />

    <LinearLayout
        android:id="@+id/client_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/client_image"
        android:paddingStart="10dp"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/client_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="@dimen/textLarge"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/name" />

        <TextView
            android:id="@+id/client_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/visited_times" />
    </LinearLayout>

    <Button
        android:id="@+id/client_remove_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/delete"
        android:background="@drawable/connect_btn_background"
        android:textColor="@color/white"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"/>

</RelativeLayout>