<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="26dp" />

    <ImageView
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_account" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacingTiny"
                android:text="Name"
                android:textColor="@color/black"
                android:textSize="@dimen/textExtra" />

            <TextView
                android:id="@+id/surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/spacingTiny"
                android:text="Surname"
                android:textColor="@color/black"
                android:textSize="@dimen/textExtra" />

            <Space
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/myConnectionsBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/my_connections" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/log_out"
                android:textColor="@color/white"

                />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>