<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">


    <Button
        android:id="@+id/sgnUpAsCustomerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/sgnUpAsOrganizationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organization"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--Here begins the fields of customers-->
    <TextView
        android:id="@+id/custName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:visibility="visible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/field_background"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:elevation="10dp"
        android:outlineSpotShadowColor="@color/black"
        android:visibility="visible"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custName" />

    <TextView
        android:id="@+id/custSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:textColor="@color/black"
        android:visibility="visible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInput"
        app:layout_constraintVertical_bias="0.03"
        />

    <EditText
        android:id="@+id/surnameInput"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/field_background"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:elevation="10dp"
        android:outlineSpotShadowColor="@color/black"
        android:visibility="visible"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custSurname" />

    <TextView
        android:id="@+id/custEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textColor="@color/black"
        android:visibility="visible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnameInput"
        app:layout_constraintVertical_bias="0.03"
        />

    <EditText
        android:id="@+id/custEmailInput"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/field_background"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:elevation="10dp"
        android:outlineSpotShadowColor="@color/black"
        android:visibility="visible"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custEmailAddress" />

    <TextView
        android:id="@+id/custPwdName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textColor="@color/black"
        android:visibility="visible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custEmailInput"
        app:layout_constraintVertical_bias="0.03"
        />

    <EditText
        android:id="@+id/custPwdInput"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:background="@drawable/field_background"
        android:elevation="10dp"
        android:outlineSpotShadowColor="@color/black"
        android:visibility="visible"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custPwdName"
        />

    <TextView
        android:id="@+id/custPwdName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_password"
        android:textColor="@color/black"
        android:visibility="visible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custPwdInput"
        app:layout_constraintVertical_bias="0.03"
        />

    <EditText
        android:id="@+id/custPwdInput2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:background="@drawable/field_background"
        android:elevation="10dp"
        android:outlineSpotShadowColor="@color/black"
        android:visibility="visible"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custPwdName2"
        />
    <!--Here begins the fields of organization-->
    <TextView
        android:id="@+id/orgName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organization_name"
        android:textColor="@color/black"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        />

    <EditText
        android:id="@+id/orgInput"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/field_background"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:elevation="10dp"
        android:outlineSpotShadowColor="@color/black"
        android:visibility="gone"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orgName" />

    <TextView
        android:id="@+id/emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textColor="@color/black"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orgInput"
        app:layout_constraintVertical_bias="0.03"
        />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:background="@drawable/field_background"
        android:elevation="10dp"
        android:outlineSpotShadowColor="@color/black"
        android:visibility="gone"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress"/>


    <TextView
        android:id="@+id/pwdName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textColor="@color/black"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        app:layout_constraintVertical_bias="0.03"
        />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:background="@drawable/field_background"
        android:elevation="10dp"
        android:outlineSpotShadowColor="@color/black"
        android:visibility="gone"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwdName"
        />

    <TextView
        android:id="@+id/pwdName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_password"
        android:textColor="@color/black"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintVertical_bias="0.03"
    />

    <EditText
        android:id="@+id/passwordInput2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:background="@drawable/field_background"
        android:elevation="10dp"
        android:outlineSpotShadowColor="@color/black"
        android:visibility="gone"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwdName2"
    />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput2"
        app:layout_constraintVertical_bias="0.05" />


</androidx.constraintlayout.widget.ConstraintLayout>